--- a/Mini_Projects/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Mini_Projects/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Balloon_Popper/BalloonMaps
+ContentBrowserDrawer.SelectedPaths=/Game/Balloon_Popper/Balloon_Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -289,8 +289,8 @@ StaticMesh.Navigation=True
 WorldSettings.HLODSystem=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Balloon_Popper/BP_Balloon.BP_Balloon
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Balloon_Popper/Balloon_Blueprints/BP_Balloon.BP_Balloon
 OpenAssetsAtExit=/Game/LevelPrototyping/Materials/MI_BalloonMaterial.MI_BalloonMaterial
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -308,7 +308,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=404.000
-WindowSize=X=1282.000 Y=722.000
+WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -325,7 +325,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
+UNR=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/Balloon_Popper/BalloonMaps
 BRUSH=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
 FBX=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
 FBXAnim=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
@@ -335,7 +335,7 @@ GenericOpen=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Min
 GenericSave=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
 MeshImportExport=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
 WorldRoot=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
-Level=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/
+Level=../../../../../../Users/Alexander/Documents/GitHub/Mini_Projects/Mini_Projects/Content/Balloon_Popper/BalloonMaps
 Project=C:/Program Files/Epic Games/UE_5.2/
 
 [ModuleFileTracking]
@@ -1429,6 +1429,14 @@ SubobjectEditor.TimeStamp=2025.09.30-15.14.56
 SubobjectEditor.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2025.09.30-15.14.48
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2025.09.30-15.14.50
+MaterialEditor.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2025.09.30-15.14.51
+NewLevelDialog.LastCompileMethod=Unknown
+GeometryProcessingInterfaces.TimeStamp=2025.09.30-15.14.48
+GeometryProcessingInterfaces.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2025.09.30-15.14.48
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1453,6 +1461,11 @@ bSCCUseGlobalSettings=False
 
 [MRU]
 MRUItem0=/Game/Balloon_Popper/BalloonMaps/M_BalloonMap
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1576,4 +1589,212 @@ MRUItem2=/Game/Balloon_Popper/BP_Balloon
 
 [AssetEditorToolkitTabLocation]
 /Game/Balloon_Popper/BalloonModel.BalloonModel=0
+/Game/Balloon_Popper/Balloon_Blueprints/BP_Balloon.BP_Balloon=0
+/Game/LevelPrototyping/Materials/MI_BalloonMaterial.MI_BalloonMaterial=0
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bEnableContextMenuTimeSlicing=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
