--- a/Mini_Projects/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Mini_Projects/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -202,7 +202,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Balloon_Popper/BalloonMaps/M_BalloonMap
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -289,7 +289,7 @@ StaticMesh.Navigation=True
 WorldSettings.HLODSystem=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Balloon_Popper/Balloon_Blueprints/BP_Balloon.BP_Balloon
 OpenAssetsAtExit=/Game/LevelPrototyping/Materials/MI_BalloonMaterial.MI_BalloonMaterial
 
@@ -1583,9 +1583,10 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Balloon_Popper/BalloonModel
-MRUItem1=/Game/LevelPrototyping/Materials/MI_BalloonMaterial
-MRUItem2=/Game/Balloon_Popper/BP_Balloon
+MRUItem0=/Game/LevelPrototyping/Materials/MI_BalloonMaterial
+MRUItem1=/Game/Balloon_Popper/Balloon_Blueprints/BP_Balloon
+MRUItem2=/Game/Balloon_Popper/BalloonModel
+MRUItem3=/Game/Balloon_Popper/BP_Balloon
 
 [AssetEditorToolkitTabLocation]
 /Game/Balloon_Popper/BalloonModel.BalloonModel=0
