--- a/Mini_Projects/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Mini_Projects/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=
@@ -219,6 +219,11 @@ MaterialExpressionScalarParameter="\"Object\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -287,9 +292,37 @@ StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
 WorldSettings.HLODSystem=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Balloon_Popper/Balloon_Blueprints/BP_Balloon.BP_Balloon
 OpenAssetsAtExit=/Game/LevelPrototyping/Materials/MI_BalloonMaterial.MI_BalloonMaterial
 
@@ -308,7 +341,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=404.000
-WindowSize=X=1284.000 Y=724.000
+WindowSize=X=1286.000 Y=726.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1463,7 +1496,6 @@ bSCCUseGlobalSettings=False
 MRUItem0=/Game/Balloon_Popper/BalloonMaps/M_BalloonMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
